--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
 .trash/
 /bin/
-/build/
 /docs/html/
 /lang/
 !/lang/README
-*.user
+/lib/bin/
 *.autosave
+*.obj
+*.pdb
 *.pro.user
 *.pro.user.*
+*.rc
+*.res
+*.user
 *.DS_Store
+Makefile*
+moc_*.cpp
+qrc_*.cpp
