--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
  - clang
 
 before_install:
- - sudo apt-add-repository -y ppa:beineri/opt-qt521
+ - sudo add-apt-repository -y ppa:beineri/opt-qt521
  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - sudo apt-get -qq update
 
