--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 install:
-  - set QTDIR=C:\Qt\5.5\mingw492_32
-  - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
-  
+  - set QTDIR=C:\Qt\5.6\msvc2015
+  - set PATH=%PATH%;%QTDIR%\bin
+
 build_script:
-  - qmake QtTest.pro
-  - mingw32-make
+  - qmake apk-icon-editor.pro
+  - nmake
