--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,6 @@ install:
   - set PATH=%PATH%;%QTDIR%\bin
 
 build_script:
-  - qmake apk-icon-editor.pro
+  - qmake "DEFINES+=CI"
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
   - nmake
