--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,10 @@ build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
   - nmake
 
+after_build:
+  - call "C:\Qt\5.6\msvc2015\bin\qtenv2.bat"
+  - call "C:\Qt\5.6\msvc2015\bin\windeployqt" "C:/projects/apk-icon-editor/bin/apk-icon-editor.exe"
+
 artifacts:
   - path: bin\win32
     name: application
