--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ install:
   - set PATH=%PATH%;%QTDIR%\bin
 
 build_script:
-  - qmake "DEFINES+=CI" -config release
+  - qmake "DEFINES+=CI"
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
   - nmake
 
