--- a/res/icons/linux/apk-icon-editor.desktop
+++ b/res/icons/linux/apk-icon-editor.desktop
@@ -3,6 +3,7 @@ Version=1.0
 Type=Application
 Name=APK Icon Editor
 Comment=APK resource editor
+GenericName=APK resource editor
 Exec=/usr/bin/apk-icon-editor %F
 Path=/usr/share/apk-icon-editor
 Icon=apk-icon-editor
