--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,8 @@ compiler:
   - gcc
   - clang
 
-before_install:
-  - sudo add-apt-repository -y ppa:beineri/opt-qt521
-  - sudo apt-get -qq update
-
 install:
-  - sudo apt-get -qq install qt52base
-
-before_script:
-  - source /opt/qt52/bin/qt52-env.sh
+  - sudo apt-get install qt5-default
 
 script:
   - qmake "QMAKE_CXX=$CXX" "QMAKE_CC=$CC" "DEFINES+=CI"
