--- a/deploy/macosx/Info.plist
+++ b/deploy/macosx/Info.plist
@@ -15,11 +15,11 @@
 	<key>CFBundleExecutable</key>
 	<string>apk-icon-editor</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.qminds.apk-icon-editor</string>
+	<string>com.qwertycube.apk-icon-editor</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright (C) Alexander Gorishnyak 2014-2018</string>
+	<string>Copyright (C) Alexander Gorishnyak 2014-2019</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
