--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 install:
   - set QTDIR=C:\Qt\5.6\msvc2015
   - set PATH=%PATH%;%QTDIR%\bin
+  - C:\Python37\python deploy\download.py
 
 build_script:
   - qmake "DEFINES+=CI"
